--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kitchen">
-        <activity android:name=".RegisterActivity"></activity>
-        <activity
-            android:name=".ui.login.RegisterActivity"
-            android:label="@string/title_activity_register" />
+        <activity android:name=".AddItem"></activity>
         <activity android:name=".itemProperties" />
-        <activity android:name=".Login">
+        <activity android:name=".Login"></activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
