--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -49,6 +50,10 @@ dependencies {
     implementation 'com.github.jrvansuita:PickImage:v2.5.2'
 
     implementation 'com.github.dhaval2404:imagepicker:1.8'
+
+    implementation 'com.firebase:geofire-android:3.1.0'
+
+    implementation 'com.github.imperiumlabs:GeoFirestore-Android:v1.5.0'
 
 
 }
