--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 
     implementation 'com.firebase:geofire-android:3.1.0'
 
-    implementation 'com.github.imperiumlabs:GeoFirestore-Android:v1.5.0'
+    implementation 'com.koalap:geofirestore-android:1.2.2'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
