--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,8 @@ dependencies {
 
     implementation 'com.karumi:dexter:6.2.2'
 
-
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
 
 }
