--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,12 +40,11 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:name=".RequestDriverActivity"
+            android:label="@string/title_activity_request_driver"></activity>
+        <activity
             android:name=".FindDriver"
-            android:label="@string/title_activity_find_driver" >
-
-
-
-        </activity>
+            android:label="@string/title_activity_find_driver"></activity>
         <activity android:name=".CompletedOrders" />
 
         <provider
