--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,8 +59,8 @@
         </service>
 
         <activity android:name="com.inkhornsolutions.kitchen.Orders" />
-        <activity android:name="com.inkhornsolutions.kitchen.AddItem" />
-        <activity android:name="com.inkhornsolutions.kitchen.itemProperties" />
+        <activity android:name="com.inkhornsolutions.kitchen.AddItem" android:parentActivityName=".MainActivity" />
+        <activity android:name="com.inkhornsolutions.kitchen.ItemProperties" android:parentActivityName=".MainActivity" />
         <activity android:name="com.inkhornsolutions.kitchen.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
