--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,20 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\hafiz\\Desktop\\myKey.jks')
+            storePassword 'inkhornsolutions'
+            keyPassword 'inkhornsolutions'
+            keyAlias 'key0'
+        }
+        release {
+            storeFile file('C:\\Users\\hafiz\\Desktop\\myKey.jks')
+            storePassword 'inkhornsolutions'
+            keyPassword 'inkhornsolutions'
+            keyAlias 'key0'
+        }
+    }
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
@@ -12,16 +26,21 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 13
-        versionName "1.2"
+        versionName "1.3"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.debug
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
