--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
-<!--    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />-->
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" /> <!-- <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" /> -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,10 +19,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kitchen">
+        <activity android:name=".ChatActivity" android:parentActivityName=".MainActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
 
         <activity
-            android:name="com.inkhornsolutions.kitchen.Profile"
-            android:parentActivityName="com.inkhornsolutions.kitchen.MainActivity"
+            android:name=".Profile"
+            android:parentActivityName=".MainActivity"
             android:requestLegacyExternalStorage="true" />
 
         <meta-data
@@ -29,14 +39,14 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="com.inkhornsolutions.kitchen.RequestDriverActivity"
+            android:name=".RequestDriverActivity"
             android:label="@string/title_activity_request_driver" />
 
         <activity
-            android:name="com.inkhornsolutions.kitchen.FindDriver"
+            android:name=".FindDriver"
             android:label="@string/title_activity_find_driver" />
 
-        <activity android:name="com.inkhornsolutions.kitchen.CompletedOrders" />
+        <activity android:name=".CompletedOrders" android:parentActivityName=".MainActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -50,26 +60,28 @@
         </provider>
 
         <service
-            android:name="com.inkhornsolutions.kitchen.Service.MyFirebaseService"
+            android:name=".Service.MyFirebaseService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <activity android:name="com.inkhornsolutions.kitchen.Orders" />
-        <activity android:name="com.inkhornsolutions.kitchen.AddItem" android:parentActivityName=".MainActivity" />
-        <activity android:name="com.inkhornsolutions.kitchen.ItemProperties" android:parentActivityName=".MainActivity" />
-        <activity android:name="com.inkhornsolutions.kitchen.Login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".Orders" android:parentActivityName=".MainActivity"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity
+            android:name=".AddItem"
+            android:parentActivityName=".MainActivity" />
+
+        <activity
+            android:name=".ItemProperties"
+            android:parentActivityName=".MainActivity" />
+
+        <activity android:name=".Login">
+
         </activity>
 
-        <activity android:name="com.inkhornsolutions.kitchen.MainActivity"/>
-
+        <activity android:name=".MainActivity" />
 
     </application>
 
