--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,4 +106,6 @@ dependencies {
 
     implementation 'io.github.chaosleung:pinview:1.4.4'
 
+    implementation 'com.bitvale:switcher:1.1.1'
+
 }
