--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kitchen">
+        <activity android:name=".OrderDetails"></activity>
         <activity android:name=".RequestLocation" />
         <activity android:name=".Verified" />
         <activity android:name=".VerifyPhone" />
