--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.inkhornsolutions.kitchen">
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the "MyLocation" functionality.
-    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
@@ -24,24 +19,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kitchen">
+        <activity android:name=".Wallet"></activity>
 
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
         <activity
             android:name=".FindRider"
-            android:label="@string/title_activity_find_rider" >
-
-        </activity>
+            android:label="@string/title_activity_find_rider"></activity>
         <activity android:name=".OrderDetails" />
         <activity android:name=".RequestLocation" />
         <activity android:name=".Verified" />
@@ -60,12 +46,6 @@
             android:name=".Profile"
             android:parentActivityName=".MainActivity"
             android:requestLegacyExternalStorage="true" />
-        <activity
-            android:name=".RequestDriverActivity"
-            android:label="@string/title_activity_request_driver" />
-        <activity
-            android:name=".FindDriver"
-            android:label="@string/title_activity_find_driver" />
         <activity
             android:name=".CompletedOrders"
             android:parentActivityName=".MainActivity" />
