--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'com.google.firebase:firebase-firestore:23.0.2'
+    implementation 'com.firebaseui:firebase-ui-auth:4.2.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
@@ -51,16 +52,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:19.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
-    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
-    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.5'
+    implementation 'com.google.firebase:firebase-database:20.0.1'
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
     implementation 'com.google.firebase:firebase-analytics:19.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.github.jrvansuita:PickImage:v2.5.2'
 
@@ -76,10 +78,10 @@ dependencies {
     implementation 'com.akexorcist:google-direction-library:1.2.1'
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.7'
 
     implementation 'com.karumi:dexter:6.2.2'
 
@@ -87,7 +89,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.5'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.13'
 
     implementation 'org.greenrobot:eventbus:3.2.0'
 
@@ -95,16 +97,16 @@ dependencies {
 
     implementation 'com.github.shivpujan12:LocationPicker:2.0'
 
-    implementation 'jp.wasabeef:glide-transformations:4.1.0'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
     // If you want to use the GPU Filters
-    implementation 'jp.co.cyberagent.android:gpuimage:2.0.4'
+    implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
 
     implementation 'com.github.arcadefire:nice-spinner:1.4.4'
     // volley http library
     implementation 'com.android.volley:volley:1.2.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.7'
 
-    implementation 'com.airbnb.android:lottie:3.6.0'
+    implementation 'com.airbnb.android:lottie:4.0.0'
 
     implementation 'io.github.chaosleung:pinview:1.4.4'
 
@@ -113,4 +115,7 @@ dependencies {
     implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
     //Optional: see how to use the utility.
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:2.0.0@aar'
+
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
+
 }
