--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,16 +112,15 @@ dependencies {
 
     implementation 'com.bitvale:switcher:1.1.1'
 
-    implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
-    //Optional: see how to use the utility.
-    implementation 'com.ogaclejapan.smarttablayout:utils-v4:2.0.0@aar'
-
     implementation 'io.nlopez.smartlocation:library:3.3.3'
 
     implementation 'com.nex3z:notification-badge:1.0.5'
 
     implementation 'com.etiya.etiyabadgetablib:etiyabadgetablib:0.0.3'
 
-    implementation 'com.github.rahimlis:badgedtablayout:v1.2'
+    implementation 'com.github.ATHBK:UltimateTabLayout:1.3.0'
+
+    def fragment_version = "1.3.6"
+    implementation "androidx.fragment:fragment:$fragment_version"
 
 }
