--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.inkhornsolutions.kitchen"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 22
-        versionName "2.0"
+        versionCode 23
+        versionName "2.2"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -122,5 +122,8 @@ dependencies {
 
     def fragment_version = "1.3.6"
     implementation "androidx.fragment:fragment:$fragment_version"
+
+    implementation 'com.github.GrenderG:Toasty:1.5.0'
+    implementation 'io.github.muddz:styleabletoast:2.4.0'
 
 }
